--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "koa geo­location and weather service middleware",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register test.js",
+    "test": "mocha --compilers js:babel-core/register --require babel-polyfill test.js --harmony --timeout 8000",
     "test:watch": "npm test -- --watch"
   },
   "repository": {
@@ -29,7 +29,11 @@
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-transform-async-to-generator": "^6.22.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
     "chai": "^3.5.0",
     "koa": "^2.0.0-alpha.8",
     "mocha": "^3.2.0",
